Fix play stuff header vertical alignment & logo proportions (pull request #1139)
Approved-by: James Shih
Approved-by: Viet Tran
Approved-by: Lucas Rainett
Approved-by: Sherly Chan

--- a/src/app/content-blocks/play-stuff/play-stuff.component.scss
+++ b/src/app/content-blocks/play-stuff/play-stuff.component.scss
@@ -39,15 +39,13 @@
     a {
       display: inline-flex;
       align-items: center;
-      height: 100%;
       width: #{$logoWidth};
 
       svg {
         max-height: 50px;
 
-        // IE 11 fix
         &.logo {
-          width: 25%;
+          width: 28%;
         }
         &.logo-text {
           width: 100%;
